# Qt-chatroom

./: CMakeLists.txt  Chwindow.cpp  Chwindow.h  Lgwindow.cpp  Lgwindow.h  Network_mg.cpp  Network_mg.h  client.cpp  client.h  main.cpp
